tests/ui/impl-trait/in-trait/default-body-type-err.stderr
error: default body not allowed on trait method with `impl Trait`
  --> $DIR/default-body-type-err.rs:9:50
   |
LL |     fn lol(&self) -> impl Deref<Target = String> {
   |                      --------------------------- ^ remove this body, or move it to an impl instead
   |                      |
   |                      this `impl Trait`

error: aborting due to previous error

